--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,14 +19,15 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - python >=3.7
   run:
-    - python >=3.6
+    - python >=3.7
     - numpy >=1.16.5
-    - pandas
+    - pandas >= 1.1
     - scipy >=1.6
     - matplotlib-base
     - coolprop >=6.0
+    - adsorption-file-parser >= 0.1.3
     - gemmi
     - importlib-resources
     - requests
