--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - numpy >=1.16.5
     - pandas >=1.1
     - scipy >=1.6
-    - matplotlib-base
+    - matplotlib-base >=3.0
     - coolprop >=6.0
     - adsorption-file-parser >=0.1.3
     - xlrd >=1.1
